--- a/jacoco-report-aggregate/pom.xml
+++ b/jacoco-report-aggregate/pom.xml
@@ -14,6 +14,11 @@
 	  <artifactId>lc-commons</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
+	<dependency>
+	  <groupId>${project.groupId}</groupId>
+	  <artifactId>lc-commons-io</artifactId>
+	  <version>${project.version}</version>
+	</dependency>
   </dependencies>
   
     <build>
