--- a/jacoco-report-aggregate/pom.xml
+++ b/jacoco-report-aggregate/pom.xml
@@ -19,6 +19,16 @@
 	  <artifactId>lc-commons-io</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
+	<dependency>
+	  <groupId>${project.groupId}.reactive</groupId>
+	  <artifactId>lc-reactive-commons</artifactId>
+	  <version>${project.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>${project.groupId}.reactive</groupId>
+	  <artifactId>lc-reactive-commons-io</artifactId>
+	  <version>${project.version}</version>
+	</dependency>
   </dependencies>
   
   <build>
