--- a/reactive/lc-reactive-commons-io/pom.xml
+++ b/reactive/lc-reactive-commons-io/pom.xml
@@ -18,5 +18,19 @@
 	  <artifactId>lc-commons-io</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
+	
+	<dependency>
+	  <groupId>net.lecousin.commons</groupId>
+	  <artifactId>lc-commons-test</artifactId>
+	  <version>${project.version}</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>net.lecousin.commons</groupId>
+	  <artifactId>lc-commons-io</artifactId>
+	  <version>${project.version}</version>
+	  <type>test-jar</type>
+	  <scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
