--- a/lc-commons-io/pom.xml
+++ b/lc-commons-io/pom.xml
@@ -27,4 +27,26 @@
 	  <scope>test</scope>
 	</dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+            <configuration>
+			  <includes>
+				<include>**/Abstract*IOTest.*</include>
+				<include>**/*IOTestUtils.*</include>
+			  </includes>
+			</configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
