--- a/jacoco-report-aggregate/pom.xml
+++ b/jacoco-report-aggregate/pom.xml
@@ -20,12 +20,12 @@
 	  <version>${project.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>${project.groupId}.reactive</groupId>
+	  <groupId>${project.groupId}</groupId>
 	  <artifactId>lc-reactive-commons</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>${project.groupId}.reactive</groupId>
+	  <groupId>${project.groupId}</groupId>
 	  <artifactId>lc-reactive-commons-io</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
