--- a/reactive/lc-reactive-commons-io/pom.xml
+++ b/reactive/lc-reactive-commons-io/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>net.lecousin.commons.reactive</groupId>
+    <groupId>net.lecousin.commons</groupId>
     <artifactId>lc-reactive-commons-parent</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -14,19 +14,19 @@
 	  <version>${project.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>net.lecousin.commons</groupId>
+	  <groupId>${project.groupId}</groupId>
 	  <artifactId>lc-commons-io</artifactId>
 	  <version>${project.version}</version>
 	</dependency>
 	
 	<dependency>
-	  <groupId>net.lecousin.commons</groupId>
+	  <groupId>${project.groupId}</groupId>
 	  <artifactId>lc-commons-test</artifactId>
 	  <version>${project.version}</version>
 	  <scope>test</scope>
 	</dependency>
 	<dependency>
-	  <groupId>net.lecousin.commons</groupId>
+	  <groupId>${project.groupId}</groupId>
 	  <artifactId>lc-commons-io</artifactId>
 	  <version>${project.version}</version>
 	  <type>test-jar</type>
