--- a/reactive/lc-reactive-commons/pom.xml
+++ b/reactive/lc-reactive-commons/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>net.lecousin.commons.reactive</groupId>
+    <groupId>net.lecousin.commons</groupId>
     <artifactId>lc-reactive-commons-parent</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -9,7 +9,7 @@
   
   <dependencies>
     <dependency>
-  	  <groupId>net.lecousin.commons</groupId>
+  	  <groupId>${project.groupId}</groupId>
   	  <artifactId>lc-commons</artifactId>
   	  <version>${project.version}</version>
     </dependency>
