--- a/reactive/pom.xml
+++ b/reactive/pom.xml
@@ -10,6 +10,8 @@
   
   <properties>
 	<project-reactor.version>3.6.2</project-reactor.version>
+	
+    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../../jacoco-report-aggregate/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
   
   <dependencies>
