--- a/lc-commons-test/pom.xml
+++ b/lc-commons-test/pom.xml
@@ -13,6 +13,17 @@
 	  <artifactId>junit-jupiter</artifactId>
 	  <version>${junit-jupiter.version}</version>
 	  <scope>compile</scope>
-	</dependency>	  
+	</dependency>
+	<dependency>
+	  <groupId>org.junit.jupiter</groupId>
+	  <artifactId>junit-jupiter-engine</artifactId>
+	  <version>${junit-jupiter.version}</version>
+	  <scope>compile</scope>
+	</dependency>
+	<dependency>
+	  <groupId>ch.qos.logback</groupId>
+	  <artifactId>logback-classic</artifactId>
+	  <version>${logback.version}</version>
+	</dependency>
   </dependencies>
 </project>
