--- a/reactive/lc-reactive-commons/pom.xml
+++ b/reactive/lc-reactive-commons/pom.xml
@@ -13,5 +13,20 @@
   	  <artifactId>lc-commons</artifactId>
   	  <version>${project.version}</version>
     </dependency>
+    
+    <dependency>
+  	  <groupId>${project.groupId}</groupId>
+  	  <artifactId>lc-commons-test</artifactId>
+  	  <version>${project.version}</version>
+  	  <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+  	  <groupId>${project.groupId}</groupId>
+  	  <artifactId>lc-commons</artifactId>
+  	  <version>${project.version}</version>
+  	  <type>test-jar</type>
+  	  <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
