--- a/reactive/reactor/lc-commons-reactor/pom.xml
+++ b/reactive/reactor/lc-commons-reactor/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.lecousin.commons</groupId>
     <artifactId>lc-reactor-commons-parent</artifactId>
-    <version>1.0.0</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>lc-commons-reactor</artifactId>
   
